<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>

    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="initial_setup">Initial Setup</string>
    <string name="location">Location</string>
    <string name="notifications">Notifications</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="permission_required">We can\'t continue without your permissions! \nPlease, give us location permissions to get the weather on your location.</string>
    <string name="warning">Warning</string>
    <string name="open_gps">Please, Open GPS or Enable Network to fetch your location!</string>
    <string name="cancelled">cancelled!</string>
    <string name="temp_kelvin">°k</string>
    <string name="temp_celsius">°c</string>
    <string name="temp_fahrenheit">°f</string>
    <string name="m_p_s">metre/sec</string>
    <string name="m_p_h">miles/hour</string>
    <string name="metres">metres</string>
    <string name="connection_lost">Network Connection Lost! \nPlease, re-connect again to fetch live data.</string>
    <string name="first_time_fetch">You must connect to the Network in the first time to use the application!</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="changed_successfully">success!</string>
    <string name="denied_map_request">You can\'t make map request!</string>
    <string name="empty_string">Empty! \nPlease, write a place to search for!</string>
    <string name="unknown_adminArea">unknown admin area</string>
    <string name="unknown_locality">unknown locality</string>
    <string name="delete_place">Are you sure to delete this place?</string>
    <string name="delete_alert">Are you sure to delete this alert?</string>

    <string name="governorate">Governorate:</string>
    <string name="area">Area</string>
    <string name="eighteen">18</string>
    <string name="broken_clouds">broken clouds</string>
    <string name="_1013_hpa">1013 hPa</string>
    <string name="pressure">Pressure</string>
    <string name="_16">16 %</string>
    <string name="clouds">Clouds</string>
    <string name="humidity">Humidity</string>
    <string name="_6_84">6.84</string>
    <string name="ultra_violet_index">Ultra Violet Index</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="_10000_metres">10000 metres</string>
    <string name="visibility">Visibility</string>
    <string name="feels_like">Feels Like</string>
    <string name="_29_63">29.63</string>

    <string name="search_by_address_or_city">Search by address, or city</string>
    <string name="governorate_value">Governorate Value</string>
    <string name="region">Region:</string>
    <string name="region_value">Region Value</string>
    <string name="save">Save</string>

    <string name="no_places">No Places</string>
    <string name="add_favorite_place">add favorite place</string>

    <string name="_18">18</string>

    <string name="meter_second">Meter / Second</string>
    <string name="miles_hour">Miles / Hour</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>

    <string name="today">Today</string>
    <string name="_31_16">31 / 16</string>

    <string name="_01_00_am">01:00 AM</string>
    <string name="_27">27</string>

    <string name="draw_overlays">Please, Enable Draw Overlays permission.</string>
    <string name="draw_overlays_description">You will not receive notifications while the app is in the background if you disable these permissions.\n\nEnable…\n1) Display pop-up windows while running in the background \n2) Display pop-up window</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="error_msg_permission_required">Permission required!\nPlease, give the permission to work correctly!</string>
    <string name="empty_alarm_from">You must select (From) date and time!</string>
    <string name="empty_alarm_to">You must select (To) date and time!</string>

    <string name="weather_alert">Weather Alert</string>
    <string name="weather_description">Weather is fine, no alerts for the scheduled time period.</string>
    <string name="dismiss">Dismiss</string>

    <string name="from">From</string>
    <string name="to">To</string>
    <string name="_3_52_am">3:52 AM</string>
    <string name="_26_feb_2021">26 Feb, 2021</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>

    <string name="no_alerts">No Alerts</string>
    <string name="add_alert">add alert</string>

    <string name="_2_52_am">2:52 AM</string>
    <string name="_to">TO</string>

    <string name="bannerId">ca-app-pub-4171202920109669/8375893206</string> <!-- ca-app-pub-3940256099942544/6300978111 -->
</resources>