<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ahmdalii.weatherforecast.ui.home.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.ahmdalii.weatherforecast.ui.favorite.view.FavoritesFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.ahmdalii.weatherforecast.ui.notification.view.NotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.ahmdalii.weatherforecast.ui.setting.view.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>