<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/mine_shaft"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mine_shaft">

        <ImageView
            android:id="@+id/imgViewSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_menu_settings"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txtViewInitialSetup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/initial_setup"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgViewSetting"
            app:layout_constraintStart_toEndOf="@+id/imgViewSetting"
            app:layout_constraintTop_toTopOf="@+id/imgViewSetting" />

        <TextView
            android:id="@+id/txtViewInitialLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="@+id/txtViewInitialSetup"
            app:layout_constraintTop_toTopOf="@+id/radioGroup" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewInitialSetup">

            <RadioButton
                android:id="@+id/radioBtnGPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:buttonTint="@color/mauve"
                android:checked="true"
                android:text="@string/gps"
                android:textColor="@android:color/white" />

            <RadioButton
                android:id="@+id/radioBtnMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/mauve"
                android:text="@string/map"
                android:textColor="@android:color/white" />

        </RadioGroup>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/notificationSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:minHeight="48dp"
            android:text="@string/notifications"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:theme="@style/MySwitchCompat"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="@+id/txtViewInitialLocation"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_background_gradient"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notificationSwitch" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>