<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:layout_margin="8dp"
    android:backgroundTint="@android:color/transparent"
    app:cardCornerRadius="50dp"
    app:cardElevation="10dp"
    android:id="@+id/rowFavorite">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/row_background_gradient">

        <TextView
            android:id="@+id/txtViewFromTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_2_52_am"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txtViewFromDate"
            app:layout_constraintStart_toStartOf="@+id/txtViewFromDate"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtViewFromDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/_26_feb_2021"
            android:textAlignment="center"
            android:textColor="@color/alto"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewFromTime" />

        <TextView
            android:id="@+id/txtViewTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="9dp"
            android:text="@string/_to"
            android:textAlignment="center"
            android:textColor="@color/alto"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txtViewFromDate"
            app:layout_constraintStart_toEndOf="@+id/txtViewFromDate"
            app:layout_constraintTop_toTopOf="@+id/txtViewFromTime" />

        <TextView
            android:id="@+id/txtViewToTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_3_52_am"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txtViewToDate"
            app:layout_constraintStart_toStartOf="@+id/txtViewToDate"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtViewToDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/_26_feb_2021"
            android:textAlignment="center"
            android:textColor="@color/alto"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtViewTo" />

        <ImageView
            android:id="@+id/imgViewDeleteIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_baseline_delete_forever_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>